# ChristEngine

./: .gitignore  .gitmodules  ChristEngine.sln  GenerateProject.bat  README.md  cmake_note.md  note.md  premake5.lua
Christ/src/: Christ.h  Pch.h
Christ/src/Christ/: Application.cpp  Application.h  Core.h  Entry.h  Log.cpp  Log.h  WindowBase.h
Christ/src/Christ/Event/: EventBase.h  WindowEvent.cpp  (+1 more)
Engine/: CMakeLists.txt
Engine/Programs/Game/PC/: CMakeLists.txt  Game.cpp
Engine/Programs/Test/: CMakeLists.txt  OpenglTest.cpp
Engine/Sources/: CMakeLists.txt
Engine/Sources/Client/: CMakeLists.txt
Engine/Sources/Drivers/: CMakeLists.txt
Engine/Sources/Drivers/GL/: CMakeLists.txt
Engine/Sources/Drivers/GL/Private/: OpenGLDevice.cpp  OpenglLoader.cpp
Engine/Sources/Drivers/GL/Public/: OpenGLDevice.h  OpenglLoader.h
Engine/Sources/Graphics/: CMakeLists.txt
GameApp/: Game.cpp
OpenGL/: Application.cpp  Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  imgui.ini
OpenGL/examples/: ExampleBase.h  ExampleCamera.cpp  ExampleCamera.h  ExampleClear.cpp  ExampleClear.h  ExampleVertexLayout.cpp  ExampleVertexLayout.h
OpenGL/resource/shader/: Basic.shader  BasicCamera.shader
PreTest/Application/: GenerateProject.bat  TEngine.sln  premake5.lua
PreTest/Application/Game/: hello.cpp
Test/: TestImGui.cpp  main.cpp  wglext.h
TestGlad/: TestGlad.cpp
ThreadDemo/: Mutex.h  TaskDispatcher.h  main.cpp
(+14 files in other folders)
